[package]
name = "tjcounter-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[dependencies]
hyper = "0.11.27"
tokio = { version = "1", features = ["full"] }
tokio-core = "0.1.18"
pretty_env_logger = "0.4.0"
futures = "0.1.21"
bytes = "1.1.0"
chrono = "0.4.19"
sprintf = "*"